Update deployment Image to version 1

--- a/kubernetes-files/frontend-deploy-service.yaml
+++ b/kubernetes-files/frontend-deploy-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: 650251710558.dkr.ecr.us-east-1.amazonaws.com/ecs-frontend
+        image: 650251710558.dkr.ecr.us-east-1.amazonaws.com/ecs-frontend:1
         ports:
         - containerPort: 80
           # env:
