--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: 650251710558.dkr.ecr.us-east-1.amazonaws.com/ecs-backend:1
+        image: 650251710558.dkr.ecr.ap-southeast-2.amazonaws.com/ammu:latest:1
         ports:
         - containerPort: 80
         env:
